--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Conatct | lm39ol</title>
+    <title>Conatct - lm39ol</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,12 +33,52 @@
         <div class="header--div">
             <h1>Find The Best Delivry</h1>
             <div class="input-group">
-                <a href="tel:+212612345678" class="call">Call Me</a>
+                <p>Toutes les infos pour nous joindre</p>
             </div>
         </div>
     </header>
 
     <main class="container mt-5">
+        <div class="contact">
+            <div class="form">
+                <h3 class="mb-4">Formulaire de contact</h3>
+                <div>
+                    <div class="mb-3 d-f">
+                        <div class="mtb-3">
+                            <label for="nom">NOM *</label>
+                            <input type="text" name="nom" class="input input-focus ">
+                        </div>
+
+                        <div class="mtb-3">
+                            <label for="phone">TÉLÉPHONE *</label>
+                            <input type="text" name="phone" class="input input-focus ">
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="email">EMAIL *</label>
+                        <input type="text" name="email" class="input-focus input">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="sujet">SUJET</label>
+                        <input type="text" name="sujet" class="input-focus input">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="message">MESSAGE *</label>
+                        <textarea name="message" id="" cols="30" rows="6" class="input-focus input textarea"></textarea>
+                    </div>
+
+                    <div>
+                        <button class="button">Envoyer</button>
+                    </div>
+                </div>
+            </div>
+            <div class="map">
+
+            </div>
+        </div>
 
     </main>
 
