--- a/start.html
+++ b/start.html
@@ -43,6 +43,85 @@
 
     <main class="container mt-5">
 
+        <div>
+            <div class="form-start">
+
+                <ul class="tab-group">
+                    <li class="tab active"><a href="#signup">Sign Up</a></li>
+                    <li class="tab"><a href="#login">Log In</a></li>
+                </ul>
+
+                <div class="tab-content">
+                    <div id="signup">
+                        <form action="/" method="post">
+
+                            <div class="top-row">
+                                <div class="field-wrap">
+                                    <label>
+                                        First Name<span class="req">*</span>
+                                    </label>
+                                    <input type="text" required autocomplete="off" />
+                                </div>
+
+                                <div class="field-wrap">
+                                    <label>
+                                        Last Name<span class="req">*</span>
+                                    </label>
+                                    <input type="text" required autocomplete="off" />
+                                </div>
+                            </div>
+
+                            <div class="field-wrap">
+                                <label>
+                                    Email Address<span class="req">*</span>
+                                </label>
+                                <input type="email" required autocomplete="off" />
+                            </div>
+
+                            <div class="field-wrap">
+                                <label>
+                                    Password<span class="req">*</span>
+                                </label>
+                                <input type="password" required autocomplete="off" />
+                            </div>
+
+                            <button type="submit" class="button button-block" />Get Started</button>
+
+                        </form>
+
+                    </div>
+
+                    <div id="login">
+
+                        <form action="/" method="post">
+
+                            <div class="field-wrap">
+                                <label>
+                                    Email Address<span class="req">*</span>
+                                </label>
+                                <input type="email" required autocomplete="off" />
+                            </div>
+
+                            <div class="field-wrap">
+                                <label>
+                                    Password<span class="req">*</span>
+                                </label>
+                                <input type="password" required autocomplete="off" />
+                            </div>
+
+                            <p class="forgot mb-3"><a href="#">Forgot Password?</a></p>
+
+                            <button class="button button-block" />Log In</button>
+
+                        </form>
+
+                    </div>
+
+                </div><!-- tab-content -->
+
+            </div> <!-- /form -->
+        </div>
+
     </main>
 
 
@@ -67,6 +146,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/start.js"></script>
 </body>
 
 </html>
