--- a/index.html
+++ b/index.html
@@ -42,10 +42,25 @@
             <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
                 <div class="col-space">
                     <div>
-
+                        <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
                     </div>
-                    <div>
-
+                    <div class="txt-center">
+                        <p class="name">MOHAMMED ATEF</p>
+                        <div class="del-rat">
+                            <div>
+                                <div>
+                                    <b>10</b>
+                                </div>
+                                Deliveries
+                            </div>
+                            <div>
+                                <div>
+                                    <b>4.8</b>
+                                    <img src="./assets/media/star.svg" alt="">
+                                </div>
+                                Rating
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
