--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,33 @@
 </head>
 
 <body>
+
+    <section class="modal" id="modal" style="display: none;">
+        <div class="header__div d-flex justify-content-between">
+            <div>
+                <img src="./assets/media/logo.png" alt="logo" style="height: 27px;">
+            </div>
+            <div>
+                <img src="./assets/media/icon-close-menu.svg" alt="icon hamburger" id="close">
+            </div>
+        </div>
+        <div>
+            <ul class="list-mobile">
+                <li class="item"><a href="index.html" class="link">Home</a></li>
+                <li class="item"><a href="contact.html" class="link">Contact Us</a></li>
+                <li class="item"><a href="start.html" class="link">Get Started</a></li>
+            </ul>
+        </div>
+    </section>
+
     <menu class="menu">
         <div>
             <div class="logo-parent">
                 <img src="./assets/media/logo.png" class="logo" alt="logo lm39ol">
             </div>
             <div>
-                <img src="./assets/media/icon-hamburger.svg" class="icon-hamburger" alt="icon hamburger">
+                <img src="./assets/media/icon-hamburger.svg" class="icon-hamburger" id="icon-hamburger"
+                    alt="icon hamburger">
                 <ul class="list">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
@@ -88,7 +108,7 @@
             <div class="col-12 text-center my-5">
                 <img src="./assets/media/logo-footer.png" class="logo-footer" alt="logo with slogon">
             </div>
-            <div class="text-center col-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="col-pd col-12 col-sm-12 col-md-4 col-lg-4">
                 <h3>Menu</h3>
                 <ul class="mt-3 footer-list">
                     <li>Home</li>
@@ -96,14 +116,16 @@
                     <li>Contact Us</li>
                 </ul>
             </div>
-            <div class="text-center col-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="col-pd col-12 col-sm-12 col-md-4 col-lg-4">
                 <h3>Item</h3>
             </div>
-            <div class="text-center col-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="col-pd col-12 col-sm-12 col-md-4 col-lg-4">
                 <h3>Item</h3>
             </div>
         </div>
     </footer>
+
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
