--- a/index.html
+++ b/index.html
@@ -68,18 +68,46 @@
                     <div class="txt-center">
                         <p class="name">MOHAMMED ATEF</p>
                         <div class="del-rat">
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>10</b>
                                 </div>
-                                Deliveries
+                                <span>Deliveries</span>
                             </div>
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>4.8</b>
                                     <img src="./assets/media/star.svg" alt="">
                                 </div>
-                                Rating
+                                <span>Rating</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
+                <div class="col-space">
+                    <div>
+                        <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
+                    </div>
+                    <div class="txt-center">
+                        <p class="name">MOHAMMED ATEF</p>
+                        <div class="del-rat">
+                            <div class="info">
+                                <div>
+                                    <b>10</b>
+                                </div>
+                                <span>Deliveries</span>
+                            </div>
+                            <div class="info">
+                                <div>
+                                    <b>4.8</b>
+                                    <img src="./assets/media/star.svg" alt="">
+                                </div>
+                                <span>Rating</span>
                             </div>
                         </div>
                     </div>
@@ -94,18 +122,18 @@
                     <div class="txt-center">
                         <p class="name">MOHAMMED ATEF</p>
                         <div class="del-rat">
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>10</b>
                                 </div>
-                                Deliveries
+                                <span>Deliveries</span>
                             </div>
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>4.8</b>
                                     <img src="./assets/media/star.svg" alt="">
                                 </div>
-                                Rating
+                                <span>Rating</span>
                             </div>
                         </div>
                     </div>
@@ -120,45 +148,18 @@
                     <div class="txt-center">
                         <p class="name">MOHAMMED ATEF</p>
                         <div class="del-rat">
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>10</b>
                                 </div>
-                                Deliveries
+                                <span>Deliveries</span>
                             </div>
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>4.8</b>
                                     <img src="./assets/media/star.svg" alt="">
                                 </div>
-                                Rating
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
-                <div class="col-space">
-                    <div>
-                        <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
-                    </div>
-                    <div class="txt-center">
-                        <p class="name">MOHAMMED ATEF</p>
-                        <div class="del-rat">
-                            <div>
-                                <div>
-                                    <b>10</b>
-                                </div>
-                                Deliveries
-                            </div>
-                            <div>
-                                <div>
-                                    <b>4.8</b>
-                                    <img src="./assets/media/star.svg" alt="">
-                                </div>
-                                Rating
+                                <span>Rating</span>
                             </div>
                         </div>
                     </div>
@@ -173,18 +174,18 @@
                     <div class="txt-center">
                         <p class="name">MOHAMMED ATEF</p>
                         <div class="del-rat">
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>10</b>
                                 </div>
-                                Deliveries
+                                <span>Deliveries</span>
                             </div>
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>4.8</b>
                                     <img src="./assets/media/star.svg" alt="">
                                 </div>
-                                Rating
+                                <span>Rating</span>
                             </div>
                         </div>
                     </div>
@@ -199,18 +200,18 @@
                     <div class="txt-center">
                         <p class="name">MOHAMMED ATEF</p>
                         <div class="del-rat">
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>10</b>
                                 </div>
-                                Deliveries
+                                <span>Deliveries</span>
                             </div>
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>4.8</b>
                                     <img src="./assets/media/star.svg" alt="">
                                 </div>
-                                Rating
+                                <span>Rating</span>
                             </div>
                         </div>
                     </div>
@@ -225,18 +226,18 @@
                     <div class="txt-center">
                         <p class="name">MOHAMMED ATEF</p>
                         <div class="del-rat">
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>10</b>
                                 </div>
-                                Deliveries
+                                <span>Deliveries</span>
                             </div>
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>4.8</b>
                                     <img src="./assets/media/star.svg" alt="">
                                 </div>
-                                Rating
+                                <span>Rating</span>
                             </div>
                         </div>
                     </div>
@@ -251,18 +252,18 @@
                     <div class="txt-center">
                         <p class="name">MOHAMMED ATEF</p>
                         <div class="del-rat">
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>10</b>
                                 </div>
-                                Deliveries
+                                <span>Deliveries</span>
                             </div>
-                            <div>
+                            <div class="info">
                                 <div>
                                     <b>4.8</b>
                                     <img src="./assets/media/star.svg" alt="">
                                 </div>
-                                Rating
+                                <span>Rating</span>
                             </div>
                         </div>
                     </div>
