--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -22,7 +24,7 @@
                 <img src="./assets/media/icon-close-menu.svg" alt="icon hamburger" id="close">
             </div>
         </div>
-        <div>
+        <div style="margin-top: 45px;">
             <ul class="list-mobile">
                 <li class="item"><a href="index.html" class="link">Home</a></li>
                 <li class="item"><a href="contact.html" class="link">Contact Us</a></li>
@@ -43,7 +45,7 @@
                 <ul class="list">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="start.html">Get Started</a></li>
+                    <li style="padding-right: 0;"><a href="start.html">Get Started</a></li>
                 </ul>
             </div>
         </div>
@@ -62,7 +64,7 @@
         <section class="row">
             <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
                 <div class="col-space">
-                    <div>
+                    <div class="fix-height">
                         <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
                     </div>
                     <div class="txt-center">
@@ -83,40 +85,18 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
 
-
-
-            <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
-                <div class="col-space">
-                    <div>
-                        <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
-                    </div>
-                    <div class="txt-center">
-                        <p class="name">MOHAMMED ATEF</p>
-                        <div class="del-rat">
-                            <div class="info">
-                                <div>
-                                    <b>10</b>
-                                </div>
-                                <span>Deliveries</span>
-                            </div>
-                            <div class="info">
-                                <div>
-                                    <b>4.8</b>
-                                    <img src="./assets/media/star.svg" alt="">
-                                </div>
-                                <span>Rating</span>
-                            </div>
-                        </div>
+                    <div class="to-profile">
+                        <a href="profile.html">
+                            <img src="./assets/media/increase.svg" class="img-more" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
                 <div class="col-space">
-                    <div>
+                    <div class="fix-height">
                         <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
                     </div>
                     <div class="txt-center">
@@ -136,13 +116,50 @@
                                 <span>Rating</span>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="to-profile">
+                        <a href="profile.html">
+                            <img src="./assets/media/increase.svg" class="img-more" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
+                <div class="col-space">
+                    <div class="fix-height">
+                        <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
+                    </div>
+                    <div class="txt-center">
+                        <p class="name">MOHAMMED ATEF</p>
+                        <div class="del-rat">
+                            <div class="info">
+                                <div>
+                                    <b>10</b>
+                                </div>
+                                <span>Deliveries</span>
+                            </div>
+                            <div class="info">
+                                <div>
+                                    <b>4.8</b>
+                                    <img src="./assets/media/star.svg" alt="">
+                                </div>
+                                <span>Rating</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="to-profile">
+                        <a href="profile.html">
+                            <img src="./assets/media/increase.svg" class="img-more" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
                 <div class="col-space">
-                    <div>
+                    <div class="fix-height">
                         <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
                     </div>
                     <div class="txt-center">
@@ -162,13 +179,19 @@
                                 <span>Rating</span>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="to-profile">
+                        <a href="profile.html">
+                            <img src="./assets/media/increase.svg" class="img-more" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
                 <div class="col-space">
-                    <div>
+                    <div class="fix-height">
                         <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
                     </div>
                     <div class="txt-center">
@@ -188,13 +211,52 @@
                                 <span>Rating</span>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="to-profile">
+                        <a href="profile.html">
+                            <img src="./assets/media/increase.svg" class="img-more" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
+                <div class="col-space">
+                    <div class="fix-height">
+                        <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
+                    </div>
+                    <div class="txt-center">
+                        <p class="name">MOHAMMED ATEF</p>
+                        <div class="del-rat">
+                            <div class="info">
+                                <div>
+                                    <b>10</b>
+                                </div>
+                                <span>Deliveries</span>
+                            </div>
+                            <div class="info">
+                                <div>
+                                    <b>4.8</b>
+                                    <img src="./assets/media/star.svg" alt="">
+                                </div>
+                                <span>Rating</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="to-profile">
+                        <a href="profile.html">
+                            <img src="./assets/media/increase.svg" class="img-more" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
                 <div class="col-space">
-                    <div>
+                    <div class="fix-height">
                         <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
                     </div>
                     <div class="txt-center">
@@ -214,13 +276,19 @@
                                 <span>Rating</span>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="to-profile">
+                        <a href="profile.html">
+                            <img src="./assets/media/increase.svg" class="img-more" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
                 <div class="col-space">
-                    <div>
+                    <div class="fix-height">
                         <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
                     </div>
                     <div class="txt-center">
@@ -241,39 +309,18 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
 
-            <div class="card card-blue mt-4 col-12 col-sm-6 sol-md-6 col-lg-4 col-xl-3">
-                <div class="col-space">
-                    <div>
-                        <img src="./assets/media/pexels-photo-4254135.jpeg" class="card-img" alt="">
-                    </div>
-                    <div class="txt-center">
-                        <p class="name">MOHAMMED ATEF</p>
-                        <div class="del-rat">
-                            <div class="info">
-                                <div>
-                                    <b>10</b>
-                                </div>
-                                <span>Deliveries</span>
-                            </div>
-                            <div class="info">
-                                <div>
-                                    <b>4.8</b>
-                                    <img src="./assets/media/star.svg" alt="">
-                                </div>
-                                <span>Rating</span>
-                            </div>
-                        </div>
+                    <div class="to-profile">
+                        <a href="profile.html">
+                            <img src="./assets/media/increase.svg" class="img-more" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
-
         </section>
 
         <section class="mt-4 text-center">
-            <button class="btn btn-primary">Load More ...</button>
+            <button class="btn btn-primary btn-load">Load More ...</button>
         </section>
     </main>
 
