--- a/start.html
+++ b/start.html
@@ -23,13 +23,15 @@
                 <img src="./assets/media/icon-close-menu.svg" alt="icon hamburger" id="close">
             </div>
         </div>
-        <div>
+        <div style="margin-top: 45px;">
             <ul class="list-mobile">
                 <li class="item"><a href="index.html" class="link">Home</a></li>
                 <li class="item"><a href="contact.html" class="link">Contact Us</a></li>
                 <li class="item"><a href="start.html" class="link">Get Started</a></li>
             </ul>
         </div>
+
+
     </section>
 
     <menu class="menu">
