--- a/start.html
+++ b/start.html
@@ -153,18 +153,25 @@
                 <img src="./assets/media/logo-footer.png" class="logo-footer" alt="logo with slogon">
             </div>
             <div class="col-pd col-12 col-sm-12 col-md-4 col-lg-4">
-                <h3>Menu</h3>
-                <ul class="mt-3 footer-list">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact Us</li>
-                </ul>
+                <div>
+                    <h3>Menu</h3>
+                    <ul class="mt-3 footer-list">
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div>
+
             </div>
             <div class="col-pd col-12 col-sm-12 col-md-4 col-lg-4">
-                <h3>Item</h3>
+                <div>
+                    <h3>Item</h3>
+                </div>
             </div>
             <div class="col-pd col-12 col-sm-12 col-md-4 col-lg-4">
-                <h3>Item</h3>
+                <div>
+                    <h3>Item</h3>
+                </div>
             </div>
         </div>
     </footer>
