--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,6 @@
             </div>
         </div>
     </section>
-
     <section class="description">
         <div>
             <h4 class="mb-2">DESCRIPTION</h4>
@@ -117,9 +116,43 @@
             </p>
         </div>
     </section>
-    <main>
 
-    </main>
+    <footer class="container footer mt-5">
+        <div class="row">
+            <div class="col-12 text-center my-5">
+                <img src="./assets/media/logo-footer.png" class="logo-footer" alt="logo with slogon">
+            </div>
+
+
+            <div class="col-pd col-12 col-sm-12 col-md-4 col-lg-4">
+                <div>
+                    <h3>Menu</h3>
+                    <ul class="mt-3 footer-list">
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div>
+
+            </div>
+
+
+            <div class="col-pd col-12 col-sm-12 col-md-4 col-lg-4">
+                <div>
+                    <h3>Item</h3>
+                </div>
+
+            </div>
+
+
+            <div class="col-pd col-12 col-sm-12 col-md-4 col-lg-4">
+                <div>
+                    <h3>Item</h3>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 
     <script src="./assets/js/main.js"></script>
 </body>
