--- a/profile.html
+++ b/profile.html
@@ -154,6 +154,10 @@
         </div>
     </footer>
 
+    <section class="section-call">
+        <a href="tel:212612345678">CALL NOW</a>
+    </section>
+
     <script src="./assets/js/main.js"></script>
 </body>
 
